Menu, services implemented